Lista mancate degli if per esperto e lettore

--- a/src/main/resources/templates/club-del-libro/visualizza-clubs.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-clubs.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lista Club del libro</title>
     <script type="text/javascript" th:src="@{/js/clubDelLibro/creazioneClubDelLibroScripts.js}"></script>
 </head>
 <body>
-    <table>
+<div layout:fragment="contenuto-pagina" class="container">
+    <table class="table" style="border-color: #b20909">
         <tr>
-            <td>Nome club</td>
-            <td>Descrizione</td>
-            <td>Generi</td>
-            <td>Copertina</td>
-            <td>Esperto</td>
+            <th scope="col">Nome club</th>
+            <th scope="col">Descrizione</th>
+            <th scope="col">Generi</th>
+            <th scope="col">Copertina</th>
+            <th scope="col">Esperto</th>
         </tr>
         <tr th:each="club : ${listaClubs}">
             <td th:text="${club.nome}"></td>
             <td th:text="${club.descrizione}"></td>
-            <td th:each="genere : ${club.generi}" th:text="${genere.nome}"></td>
-            <td th:each="lettore : ${club.lettori}" th:text="${lettore.nome}"></td>
-            <td> <img th:src="@{'data:image/png;base64,'+ ${club.immagineCopertina}}" /></td>
+            <td><p th:each="genere : ${club.generi}" th:text="${genere.nome}"></p></td>
+            <td><img th:src="@{'data:image/png;base64,'+ ${club.immagineCopertina}}"/></td>
             <td th:text="${club.esperto.nome}"></td>
-            <td> <a th:href="@{'/club-del-libro/modifica-dati/' + ${club.idClub}}">Modifica (Esperto) </a> </td>
-            <td> <a th:href="@{'/club-del-libro/iscrizione-club/' + ${club.idClub}}">Iscrivimi (Lettore) </a> </td>
-            <td> <a th:href="@{'/club-del-libro/visualizza-dati-club/' + ${club.idClub}}">Visualizza </a> </td>
+            <td><a th:href="@{'/club-del-libro/modifica-dati/' + ${club.idClub}}">Modifica (Esperto) </a></td>
+            <td><a th:href="@{'/club-del-libro/iscrizione-club/' + ${club.idClub}}">Iscrivimi (Lettore) </a></td>
+            <td>
+                <button class="btn btn-main "><a th:href="@{'/club-del-libro/visualizza-dati-club/' + ${club.idClub}}">Visualizza </a>
+                </button>
+            </td>
         </tr>
     </table>
-
-    <form method="post" action="/club-del-libro/crea" enctype="multipart/form-data">
-        <p> Nome <input type="input" name="nome" required> </p>
-        <p> Descrizione <input type="input" name="descrizione" required> </p>
-        <div id="lista-generi"> </div>
-        <p> <input type="file" name="copertina" accept="image/png, image/jpeg" ></p>
-        <p> <input type="submit"></p>
-    </form>
-    <p><button onclick="aggiungiRigaGenere()">Aggiungi un altro genere</button></p>
+</div>
 </body>
 </html>
