inizio funzionamento della gui
però non riesco a fargli prendere js dal dile esterno

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,5 +9,6 @@
     <a href="/autenticazione/logout">Logout</a>
     <a href="/autenticazione/">Login</a>
     <a href="/registrazione/modifica-dati">Modifica i dati inseriti</a>
+    <a href="/preferenze-di-lettura/generi">Aggiorna i tuoi generi preferiti</a>
 </body>
 </html>
