--- a/src/main/resources/templates/prenotazione-libri/visualizza-libri-prenotabili.html
+++ b/src/main/resources/templates/prenotazione-libri/visualizza-libri-prenotabili.html
@@ -4,36 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Libri prenotabili</title>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div layout:fragment="contenuto-pagina" class="container">
-        <h2>Ricerca per titolo</h2>
-        <form method="get" action="/prenotazione-libri/ricerca-titolo">
-            <input type="text" name="titolo">
-            <input class="btn-main" type="submit" value="Cerca">
+        <form method="get" action="/prenotazione-libri/ricerca">
+            <h2>Ricerca</h2>
+            <div class="input-group mb-3" style="width:40%;">
+                <input class="form-control" type="text" name="stringa">
+                <div class="input-group-append">
+                    <input class="btn btn-outline-secondary" style="background-color: #b20909; color:white" type="submit" value="Cerca">
+                </div>
+            </div>
+            <div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="filtro" id="titolo" value="titolo" checked>
+                    <label class="form-check-label" for="titolo">Cerca per titolo</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="filtro" id="genere" value="genere">
+                    <label class="form-check-label" for="genere">Cerca per genere</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="filtro" id="biblioteca" value="biblioteca">
+                    <label class="form-check-label" for="biblioteca">Cerca per biblioteca</label>
+                </div>
+            </div>
         </form>
-        <table class="table" style="border-color:#b20909">
-                <tr>
-                    <th scope="col">Copertina</th>
-                    <th scope="col">Titolo</th>
-                    <th scope="col">Generi</th>
-                    <th scope="col">Prenotalo</th>
-                </tr>
-                <tr th:each="libro : ${listaLibri}">
-                    <td><img th:src="${libro.immagineLibro}"/> </td>
-                    <th th:text="${libro.titolo}" scope="row"></th>
-                    <td><p th:each="genere : ${libro.generi}" th:text="${genere.nome}"></p></td>
-                    <td>
-                        <form method="post" th:action="@{'/prenotazione-libri/' + ${libro.idLibro} + '/prenota-libro'}">
-                            <div th:if="${session.loggedUser != null}">
-                                <button class="btn-main" type="submit">Prenota</button>
-                            </div>
-                            <div th:unless="${session.loggedUser != null}">
-                                <button class="btn-main" type="submit" disabled>Prenota</button>
-                            </div>
-                        </form>
-                    </td>
-                </tr>
+        <div class="row" style="margin-top:2%">
+            <div class="col"><!-- EMPTY --></div>
+            <div class="col" th:if="${session.loggedUser != null && session.loggedUser.tipo.equals('Biblioteca')}">
+                <a class="btn btn-main" style="color:white" href="#">Inserisci un nuovo libro prenotabile dalla tua biblioteca</a>
+            </div>
+            <div class="col"><!-- EMPTY --></div>
+        </div>
+        <table class="table" style="border-color:#b20909; margin-top:2%">
+            <tr>
+                <th scope="col">Copertina</th>
+                <th scope="col">Titolo</th>
+                <th scope="col">Generi</th>
+                <th scope="col">Visualizza o prenota</th>
+            </tr>
+            <tr th:each="libro : ${listaLibri}">
+                <td><img style="max-width:150px" th:src="@{'data:image/png;base64,'+ ${libro.immagineLibro}}"/></td>
+                <th th:text="${libro.titolo}" scope="row"></th>
+                <td><p th:each="genere : ${libro.generi}" th:text="${genere.nome}"></p></td>
+                <td>
+                    <form method="post" th:action="@{'/prenotazione-libri/' + ${libro.idLibro} + '/visualizza-libro'}">
+                        <div>
+                            <button type="submit" style="border:none;width: 80%;background-color:white">
+                                <i class="fa fa-search" style="color:#b20909"></i>
+                            </button>
+                        </div>
+                    </form>
+                </td>
+            </tr>
         </table>
     </div>
 </body>
