--- a/src/main/resources/templates/prenotazione-libri/visualizza-prenota-libro.html
+++ b/src/main/resources/templates/prenotazione-libri/visualizza-prenota-libro.html
@@ -73,13 +73,20 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <h3 th:text="${biblioteca.nomeBiblioteca}"></h3>
-                                    <small class="text-muted"><th th:text="${biblioteca.citta}"></th></small>
+                                    <small class="text-muted">
+                                        <th th:text="${biblioteca.citta}"></th>
+                                    </small>
                                 </div>
                                 <div>
                                     <form method="post" action="/prenotazione-libri/conferma-prenotazione">
                                         <input type="hidden" name="idBiblioteca" th:value="${biblioteca.email}">
                                         <input type="hidden" name="idLibro" th:value="${libro.idLibro}">
-                                        <button class="btn btn-primary btn-lg" style="background-color: #073763" type="submit">Prenota</button>
+                                        <div th:if="${session.loggedUser != null && session.loggedUser.tipo.equals('Lettore')}">
+                                            <button class="btn btn-primary btn-lg" style="background-color: #073763" type="submit">Prenota</button>
+                                        </div>
+                                        <div th:unless="${session.loggedUser != null && session.loggedUser.tipo.equals('Lettore')}">
+                                            <button class="btn btn-primary btn-lg" style="background-color: #073763" type="submit" disabled>Prenota</button>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
