--- a/src/main/resources/templates/club-del-libro/visualizza-eventi.html
+++ b/src/main/resources/templates/club-del-libro/visualizza-eventi.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lista Eventi del club</title>
 </head>
 <body>
+<div layout:fragment="contenuto-pagina" class="container">
+
+    <h3> Eventi del club </h3>
+    <table class="table">
+        <tr>
+            <th scope="col">Nome Evento</th>
+            <th scope="col">Descrizione</th>
+            <th scope="col">Data</th>
+            <th scope="col">Ora</th>
+            <th scope="col">Libro trattato</th>
+            <th scope="col">Actions</th>
+        </tr>
+        <tr th:each="evento : ${club.eventi}">
+            <td th:text="${evento.nomeEvento}"> </td>
+            <td th:text="${evento.descrizione}"> </td>
+            <td th:text="${#temporals.format(evento.dataOra,'dd/MM/yyyy')}"> </td>
+            <td th:text="${#temporals.format(evento.dataOra,'HH:mm')}"> </td>
+            <td th:text="${evento.libro} ? ${evento.libro} : 'NA'"> </td>
+            <td>
+                <button type="button" class="btn btn-primary" style="margin-top: 5px; margin-bottom: 5px">
+                    Details
+                </button>
+                <button type="button" class="btn btn-success" style="margin-top: 5px; margin-bottom: 5px">
+                    Join
+                </button>
+                <button type="button" class="btn btn-danger" style="margin-top: 5px; margin-bottom: 5px">
+                    Delete
+                </button>
+            </td>
+        </tr>
+    </table>
+
+</div>
 
 </body>
 </html>
