--- a/src/main/resources/templates/area-utente/visualizza-esperto.html
+++ b/src/main/resources/templates/area-utente/visualizza-esperto.html
@@ -22,11 +22,10 @@
                                     </h3>
                                     <div class="text-center d-xl-flex justify-content-xl-center align-items-xl-center mb-3">
                                         <picture><img class="border rounded-circle d-xl-flex justify-content-xl-center"
-                                                      src="https://resizeimage.net/mypic/in5aL53oOZZPHQJV/eQ1sz/71ntox3m5-l.png">
-                                        </picture>
+                                                      th:src="@{~/image/area-utente/user.png}">                                        </picture>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" href="/area-utente/modifica-dati" type="button">Modifica Dati Account</a>
+                                        <a class="btn btn-main" href="/modifica-dati" type="button">Modifica Dati Account</a>
                                     </div>
                                     <div class="mb-3">
                                         <a class="btn btn-main" type="button">Gestione Generi</a>
@@ -50,40 +49,40 @@
                                                     <table class="table table-user-information">
                                                         <tbody>
                                                         <tr>
-                                                            <td>Nome:</td>
+                                                            <th>Nome:</th>
                                                             <td th:text="${esperto.getNome()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Cognome:</td>
+                                                            <th>Cognome:</th>
                                                             <td th:text="${esperto.getCognome()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Email:</td>
+                                                            <th>Email:</th>
                                                             <td th:text="${esperto.getEmail()}"></td>
                                                         </tr>
 
                                                         <tr>
-                                                            <td>Provincia:</td>
+                                                            <th>Provincia:</th>
                                                             <td th:text="${esperto.getProvincia()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Cittá:</td>
+                                                            <th>Cittá:</th>
                                                             <td th:text="${esperto.getCitta()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Via</td>
+                                                            <th>Via:</th>
                                                             <td th:text="${esperto.getVia()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Recapito Telefonico</td>
+                                                            <th>Recapito Telefonico:</th>
                                                             <td th:text="${esperto.getRecapitoTelefonico()}"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Lavora in Biblioteca</td>
+                                                            <th>Lavora in:</th>
                                                             <td th:text="${esperto.getBiblioteca.getNomeBiblioteca()}"></td>
                                                         </tr>
                                                         <tr th:each="genere : ${esperto.getGeneri()}">
-                                                            <td>Specializzato in</td>
+                                                            <th>Specializzato in:</th>
                                                             <td th:text="${genere.getNome()}"></td>
                                                             <br>
                                                         </tr>
