--- a/src/main/resources/templates/area-utente/visualizza-esperto.html
+++ b/src/main/resources/templates/area-utente/visualizza-esperto.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 <head>
-    <link rel="stylesheet" type="text/css" href="../../style/area-utente.css">
-    <link rel="stylesheet" type="text/css" href="../../style/style.css">
+    <link rel="stylesheet" th:href="@{~/style/area-utente.css}">
+    <link rel="stylesheet" th:href="@{~/style/style.css}">
     <meta charset="UTF-8">
     <title>Area Esperto</title>
 </head>
