--- a/src/main/resources/templates/preferenze-lettura/modifica-generi.html
+++ b/src/main/resources/templates/preferenze-lettura/modifica-generi.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <script type="text/javascript" th:src="@{/js/preferenzeDiLettura/gestioneGeneri.js}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Inserisci i tuoi generi preferiti!</title>
+    <title>Inserisci i generi in cui sei specializzato</title>
 
 </head>
 <body>
 
 <div layout:fragment="contenuto-pagina" class="text-center">
-    <h1>Generi Preferiti</h1>
+    <h1>Generi Specializzato</h1>
     <div class="d-flex justify-content-center">
         <div class="column sx">
             <h6>Aggiungi genere</h6>
