--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,40 +12,39 @@
 
             <div class="col">
                 <a href="/club-del-libro/"><img
-                        th:src="@{~/image/registrazione/Lettore.jpeg}"></a>
+                        th:src="@{~/image/home/Club_del_libro.jpeg}"></a>
 
-                <p>Clicca sull'immagine per registrati come lettore.
-                    Potrai prenotare libri, iscriverti a club e
-                    prendere parte ad eventi.</p>
+                <p>Clicca sull'immagine per visualizzare i club del libro
+                    ed unirti a milioni di lettori che condividono
+                    i tuoi stessi interessi.</p>
             </div>
 
             <div class="col">
                 <a href="/visualizza-biblioteche/"><img
-                        th:src="@{~/image/registrazione/Esperto.jpg}">
+                        th:src="@{~/image/home/Biblioteche.jpg}">
                 </a>
 
-                <p>Clicca sull'immagine per registrati come esperto.
-                    Potrai organizzare eventi nella biblioteca dove lavori
-                    e creare club.</p>
+                <p>Clicca sull'immagine per visualizzare le biblioteche
+                    che più ti possono interessare.</p>
             </div>
 
             <div class="col">
                 <a href="/visualizza-esperti/"><img
-                        th:src="@{~/image/registrazione/Biblioteca.jpg}">
+                        th:src="@{~/image/home/Esperti.jpg}">
                 </a>
 
-                <p>Clicca sull'immagine per registrarti come biblioteca.
-                    Potrai far prenotare i tuoi libri, ospitare club del libro e
-                    tanto altro ancora...</p>
+                <p>Clicca sull'immagine per visualizzare gli esperti
+                    ed interagire con loro per farti consigliare i
+                    libri più adatti a te.</p>
             </div>
             <div class="col">
                 <a href="/prenotazione-libri/"><img
-                        th:src="@{~/image/registrazione/Biblioteca.jpg}">
+                        th:src="@{~/image/home/Prenotazione_libri.jpg}">
                 </a>
 
-                <p>Clicca sull'immagine per registrarti come biblioteca.
-                    Potrai far prenotare i tuoi libri, ospitare club del libro e
-                    tanto altro ancora...</p>
+                <p>Clicca sull'immagine per prenotare i libri che desider
+                    senza doverti muovere di casa
+                    (tranne che per andarli a prendere).</p>
             </div>
 
         </div>
