Tasto registrazione funzionante

--- a/src/main/resources/templates/layout/includes/navbar.html
+++ b/src/main/resources/templates/layout/includes/navbar.html
@@ -28,7 +28,7 @@
             </div>
 
             <div th:unless="${session.loggedUser != null && session.loggedUser.email != null}">
-                <a class="btn btn-main" type="submit" th:href="@{/registrazione}">Registrati</a>
+                <a class="btn btn-main" type="submit" th:href="@{/registrazione/}">Registrati</a>
                 <a class="btn btn-main" type="submit" th:href="@{/autenticazione}">Accedi</a>
             </div>
 
